# rstroller

./: Cargo.toml  README.md  TODO.md  flake.nix
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmd/: app.rs  args.rs  cmd.rs  command_name.rs  commands.rs  mod.rs  name.rs  utils.rs
cli/src/cmd/cmds/: mod.rs  waybar.rs
cli/src/cmds/: mod.rs  mpris.rs  names.rs  player.rs  utils.rs  waybar.rs
cli/src/cmds/waybar/: markup.rs  mod.rs
cli/src/core/: app.rs  args.rs  cmd.rs
cli/src/core_definition/: app.rs  args.rs  mod.rs
common/: Cargo.toml
common/src/: err.rs  lib.rs  utils.rs
common/src/linux/: mod.rs
common/src/player/: mod.rs  mpris_listener.rs  player_state.rs  preferred_player.rs  preferred_player_listener.rs
common/src/player/mpris_wrapper/: controller.rs  listener.rs  mod.rs  player_action.rs  state.rs  wrapper.rs
common/src/player/preferred/: mod.rs  watcher.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/src/app/: mod.rs  mpris_listener.rs  style.css  track_info.rs
gui/src/app/ui/: album_art.rs  mod.rs  player_controller.rs  player_info.rs  player_progress.rs  style.css  track_info.rs
