[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
common = { path = "../common" }
mpris = "2.0.1"
once_cell = "1.19.0"
serde_json = "1.0.113"
strum = "0.26.1"
strum_macros = "0.26.1"
