[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
common = { path = "../common" }
gtk4 = "0.8.0"
mpris = "2.0.1"
tokio = { version = "1", features = ["full"] }
